# wgpu

./: Cargo.toml  build.rs
shaders/: block-target.wgsl  hotbar.wgsl  shader.wgsl
src/: main.rs
src/engine/: app.rs  block_pipeline.rs  block_target_pipeline.rs  hotbar_pipeline.rs  mod.rs  texture.rs
src/mesh/: mod.rs  target_vertex.rs  vertex.rs
src/objects/: block.rs  block_face.rs  block_material.rs  component.rs  mod.rs  target.rs  target_uniform.rs
src/scene/: camera.rs  camera_uniform.rs  frustum.rs  mod.rs  projection.rs
src/window/: event_loop_request.rs  mod.rs  state.rs
src/world/: chunk.rs  chunk_buffer.rs  chunk_mesh.rs  mod.rs  world.rs
